--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                         </p>
                         <ul class="list-ico">
                           <li><span class="bi bi-geo-alt"></span> Japan, and anywhere in the world online</li>
-                          <li><span class="bi bi-envelope"></span> kikuchimiyuki12@gmail.com</li>
+                          <!-- <li><span class="bi bi-envelope"></span> kikuchimiyuki12@gmail.com</li> -->
                         </ul>
                       </div>
                       <div class="socials">
