--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
               <div class="contact-mf">
                 <div id="contact" class="box-shadow-full">
                   <div class="row">
-                    <div class="col-md-6">
+                    <!-- <div class="col-md-6">
                       <div class="title-box-2">
                         <h5 class="title-left">
                           Send Message Us
@@ -718,7 +718,7 @@
                           </div>
                         </form>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-6">
                       <div class="title-box-2 pt-4 pt-md-0">
                         <h5 class="title-left">
@@ -733,7 +733,7 @@
                           and explore exciting opportunities together
                         </p>
                         <ul class="list-ico">
-                          <li><span class="bi bi-geo-alt"></span> Japan, and anywhere in the world online</li>
+                          <!-- <li><span class="bi bi-geo-alt"></span> Japan, and anywhere in the world online</li> -->
                           <!-- <li><span class="bi bi-envelope"></span> kikuchimiyuki12@gmail.com</li> -->
                         </ul>
                       </div>
