--- a/details01.html
+++ b/details01.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>DevFolio Bootstrap Portfolio Template - Portfolio Details</title>
+    <title>Miyuki Kikuchi - Portfolio Details-1</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -123,17 +123,19 @@
               <div class="portfolio-info">
                 <h3>Project information</h3>
                 <ul>
-                  <li><strong>Category</strong>: Mobile app</li>
+                  <li><strong>Category</strong>: Web design</li>
+                  <li><strong>Client</strong>: ASU Company</li>
                   <li><strong>Project date</strong>: 01 March, 2020</li>
-                  <li><strong>Project URL</strong>: <a href="https://github.com/Miyuki-yuki/IeltsIdiomMaster"
-                      target="_blank">https://github.com/Miyuki-yuki/IeltsIdiomMaster</a></li>
+                  <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>This is a portfolio detail</h2>
                 <p>
-                  This app is a best fit for people who wants to learn Englis idioms.
-                  There are 100 idioms to be a better speaker and you can memorize them with pictures and quizzes.
+                  Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia.
+                  Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia
+                  accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt
+                  eius.
                 </p>
               </div>
             </div>
