--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             </div>
             <div class="col-md-4">
               <div class="work-box">
-                <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="https://github.com/Miyuki-yuki/restaurant" target="_blank" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
                   </div>
@@ -391,14 +391,15 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Loreda Cuno Nere</h2>
+                      <h2 class="w-title">shop information app</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                        <a href="https://github.com/Miyuki-yuki/restaurant" target="_blank"> <span
+                            class="bi bi-plus-circle"></span></a>
                       </div>
                     </div>
                   </div>
@@ -407,7 +408,7 @@
             </div>
             <div class="col-md-4">
               <div class="work-box">
-                <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="https://github.com/Miyuki-yuki/probablity0914" target="_blank" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
                   </div>
@@ -415,14 +416,15 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Mavrito Lana Dere</h2>
+                      <h2 class="w-title">e-commerce app</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                        <a href="https://github.com/Miyuki-yuki/probablity0914" target="_blank"> <span
+                            class="bi bi-plus-circle"></span></a>
                       </div>
                     </div>
                   </div>
@@ -439,9 +441,9 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Bindo Laro Cado</h2>
+                      <h2 class="w-title">weather app</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -463,9 +465,9 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Studio Lena Mado</h2>
+                      <h2 class="w-title">Book list</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -487,9 +489,9 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Studio Big Bang</h2>
+                      <h2 class="w-title"></h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                        <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2017</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
