--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">e-commerce app</h2>
+                      <h2 class="w-title">healing music app</h2>
                       <div class="w-more">
                         <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="https://github.com/Miyuki-yuki/probablity0914" target="_blank"> <span
+                        <a href="https://github.com/Miyuki-yuki/healingApp" target="_blank"> <span
                             class="bi bi-plus-circle"></span></a>
                       </div>
                     </div>
@@ -448,7 +448,8 @@
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                        <a href="https://github.com/Miyuki-yuki/weatherApp1005" terget="_blank"> <span
+                            class="bi bi-plus-circle"></span></a>
                       </div>
                     </div>
                   </div>
@@ -465,7 +466,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Book list</h2>
+                      <h2 class="w-title">Book list app</h2>
                       <div class="w-more">
                         <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
@@ -489,14 +490,15 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title"></h2>
+                      <h2 class="w-title">number game app</h2>
                       <div class="w-more">
                         <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2017</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                        <a href="https://github.com/Miyuki-yuki/probablity0914" target="_blank"> <span
+                            class="bi bi-plus-circle"></span></a>
                       </div>
                     </div>
                   </div>
