--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Book list app</h2>
+                      <h2 class="w-title">Shopping site app</h2>
                       <div class="w-more">
                         <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
