--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">flash card and quiz app</h2>
+                      <h2 class="w-title">flash card and quiz app(code,details)</h2>
                       <div class="w-more">
                         <span class="w-ctegory">SwiftUI</span> / <span class="w-date">10 Dec. 2022</span>
                       </div>
@@ -466,7 +466,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Shopping site app</h2>
+                      <h2 class="w-title">Shopping site app(book store)</h2>
                       <div class="w-more">
                         <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
@@ -490,7 +490,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">number game app</h2>
+                      <h2 class="w-title">number game app(timer app)</h2>
                       <div class="w-more">
                         <span class="w-ctegory">SwiftUI</span> / <span class="w-date">18 Sep. 2017</span>
                       </div>
